--- a/index.html
+++ b/index.html
@@ -24,33 +24,53 @@
         }
         .container { max-width: 850px; width: 95%; margin: auto; }
         
-        /* --- 網頁端響應式預覽樣式 --- */
+        /* 🌐 網頁端響應式預覽樣式 (顧問操作時使用) */
         .fund-name { font-size: 1rem; font-weight: bold; line-height: 1.4; }
         .fund-sub-info { font-size: 0.85rem; color: #6c757d; margin-top: 3px; }
         .code-highlight { font-weight: bold; color: var(--danger-red); font-family: 'Consolas', monospace; font-size: 1.15rem; line-height: 1.2; }
-        h6.title-label { font-size: 1.1rem; font-weight: bold; }
+        h6.title-label { font-size: 1.1rem; }
 
         @media (max-width: 576px) {
             .fund-name { font-size: 0.95rem; }
             .code-highlight { font-size: 1rem; }
         }
 
-        /* -------------------------------------------------- */
-        /* 📸 截圖輸出專用巨大化樣式 (與網頁預覽徹底分離) */
-        /* -------------------------------------------------- */
-        .screenshot-mode h6.title-label { font-size: 34px !important; font-weight: bold !important; padding: 18px !important; }
-        .screenshot-mode .fund-name { font-size: 34px !important; font-weight: bold !important; line-height: 1.3 !important; }
-        .screenshot-mode .fund-sub-info { font-size: 2rem !important; font-weight: bold !important; line-height: 1.4 !important; color: #444 !important; }
-        .screenshot-mode .code-highlight { font-size: 2.4rem !important; font-weight: bold !important; line-height: 1.2 !important; }
-        .screenshot-mode .screenshot-footer { font-size: 1.2rem !important; font-weight: bold !important; padding-top: 15px !important; color: #333 !important; }
-        .screenshot-mode .code-col { width: 330px !important; } /* 寬度配合大字體 */
+        /* 📸 截圖輸出專用樣式 (強制分離樣式 - 依照您的最新規範設定) */
+        .screenshot-mode h6.title-label { 
+            font-size: 38px !important; 
+            font-weight: bold !important; 
+            padding: 20px !important; 
+        }
+        .screenshot-mode .fund-name { 
+            font-size: 36px !important; 
+            font-weight: bold !important; 
+            line-height: 1.3 !important; 
+        }
+        .screenshot-mode .fund-sub-info { 
+            font-size: 2rem !important; 
+            font-weight: bold !important; 
+            line-height: 1.4 !important; 
+            color: #444 !important; /* 截圖時子資訊稍微加深顏色以便閱讀 */
+        }
+        .screenshot-mode .code-highlight { 
+            font-size: 2.4rem !important; 
+            font-weight: bold !important; 
+            line-height: 1.2 !important; 
+        }
+        .screenshot-mode .screenshot-footer { 
+            font-size: 1.2rem !important; 
+            font-weight: bold !important; 
+            padding-top: 20px !important; 
+            color: #333 !important;
+        }
+        .screenshot-mode .code-col { width: 350px !important; } /* 加大寬度以容納 2.4rem 的文字 */
         .screenshot-mode table th { font-size: 22px !important; font-weight: bold !important; }
 
         /* 表格排版 */
         .table-custom { width: 100%; border-collapse: collapse; background: white; table-layout: auto; }
         .table-custom thead th { background: var(--primary-blue); color: white; padding: 10px 8px; white-space: nowrap; }
-        .table-custom tbody td { padding: 12px 8px; border-bottom: 1px solid #eee; vertical-align: middle; }
-        .code-col { text-align: center; width: 150px; }
+        .table-custom tbody td { padding: 15px 10px; border-bottom: 1px solid #eee; vertical-align: middle; }
+        .code-col { text-align: center; width: 140px; }
         
         .nav-tabs .nav-link { border: none; color: #7f8c8d; font-weight: bold; padding: 12px; cursor: pointer; }
         .nav-tabs .nav-link.active { background: var(--primary-blue) !important; color: white !important; border-radius: 8px 8px 0 0; }
@@ -86,7 +106,7 @@
 
     <div class="tab-content" id="queryTabContent">
         <div class="tab-pane fade show active" id="on-pane" role="tabpanel">
-            <div class="section-header"><span>境內基金查詢系統</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
+            <div class="section-header"><span>境內基金查詢</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
             <select id="bankOn" class="form-select mb-3"><option value="">-- 選擇銷售機構 --</option></select>
             <div class="row g-1 mb-3">
                 <div class="col-3"><div class="form-check"><input class="form-check-input on-filter" type="checkbox" id="onTISA"><label class="form-check-label">TISA</label></div></div>
@@ -99,7 +119,7 @@
                 <div class="col-3"><div class="form-check"><input class="form-check-input on-filter" type="checkbox" id="onZAR"><label class="form-check-label">南非幣</label></div></div>
                 <div class="col-3"><div class="form-check"><input class="form-check-input on-filter" type="checkbox" id="onJPY"><label class="form-check-label">日幣</label></div></div>
             </div>
-            <div id="listOn" class="list-container">資料加載中...</div>
+            <div id="listOn" class="list-container">載入中...</div>
             <div id="areaOn" style="display:none;">
                 <div id="captureOn" style="background: white; padding: 15px;">
                     <h6 class="text-center fw-bold mb-2 p-2 rounded title-label" id="titleOn" style="color: var(--primary-blue); background: var(--accent-blue);"></h6>
@@ -111,7 +131,7 @@
         </div>
 
         <div class="tab-pane fade" id="gsam-pane" role="tabpanel">
-            <div class="section-header"><span>GSAM查詢系統</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
+            <div class="section-header"><span>GSAM查詢</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
             <select id="bankGsam" class="form-select mb-3"><option value="">-- 選擇銷售機構 --</option></select>
             <div class="row g-1 mb-3">
                 <div class="col-3"><div class="form-check"><input class="form-check-input gsam-filter" type="checkbox" id="gsamPre"><label class="form-check-label">前收</label></div></div>
@@ -138,7 +158,7 @@
         </div>
 
         <div class="tab-pane fade" id="sicav-pane" role="tabpanel">
-            <div class="section-header"><span>GSAM(SICAV)查詢系統</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
+            <div class="section-header"><span>GSAM(SICAV)查詢</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
             <select id="bankSicav" class="form-select mb-3"><option value="">-- 選擇銷售機構 --</option></select>
             <div class="row g-1 mb-3">
                 <div class="col-3"><div class="form-check"><input class="form-check-input sicav-filter" type="checkbox" id="sicavPre"><label class="form-check-label">前收</label></div></div>
@@ -161,7 +181,7 @@
         </div>
 
         <div class="tab-pane fade" id="ninetyone-pane" role="tabpanel">
-            <div class="section-header"><span>晉達下單查詢系統</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
+            <div class="section-header"><span>晉達下單查詢</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
             <select id="bankNinetyone" class="form-select mb-3"><option value="">-- 選擇銷售機構 --</option></select>
             <div class="row g-1 mb-3">
                 <div class="col-3"><div class="form-check"><input class="form-check-input ninetyone-filter" type="checkbox" id="ninetyonePre"><label class="form-check-label">前收</label></div></div>
@@ -186,7 +206,7 @@
         </div>
 
         <div class="tab-pane fade" id="ireland-pane" role="tabpanel">
-            <div class="section-header"><span>愛爾蘭下單查詢系統</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
+            <div class="section-header"><span>愛爾蘭下單查詢</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
             <select id="bankIreland" class="form-select mb-3"><option value="">-- 選擇銷售機構 --</option></select>
             <div class="row g-1 mb-3">
                 <div class="col-3"><div class="form-check"><input class="form-check-input ireland-filter" type="checkbox" id="irelandPre"><label class="form-check-label">前收</label></div></div>
@@ -213,7 +233,7 @@
         </div>
 
         <div class="tab-pane fade" id="janus-pane" role="tabpanel">
-            <div class="section-header"><span>駿利下單查詢系統</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
+            <div class="section-header"><span>駿利下單查詢</span><button class="btn btn-sm btn-outline-primary" onclick="togglePinSettings()">⚙️ 釘選</button></div>
             <select id="bankJanus" class="form-select mb-3"><option value="">-- 選擇銷售機構 --</option></select>
             <div class="row g-1 mb-3">
                 <div class="col-3"><div class="form-check"><input class="form-check-input janus-filter" type="checkbox" id="janusPre"><label class="form-check-label">前收</label></div></div>
@@ -245,10 +265,10 @@
     let datasets = { On: [], Gsam: [], Sicav: [], Ninetyone: [], Ireland: [], Janus: [] };
     let allBanks = [];
 
-    // --- 智慧格式化：多組長代號自動斷行 ---
+    // --- 智慧格式化：處理多組代號斷行 ---
     function formatOrderCode(code) {
         if (!code) return "";
-        let parts = String(code).split(/\s+/).filter(p => p.trim().length > 0);
+        let parts = code.split(/\s+/).filter(p => p.trim().length > 0);
         if (parts.length > 1 && parts.some(p => p.length > 6)) {
             return parts.join("<br>");
         }
@@ -314,7 +334,7 @@
 
         if (suffix === 'On' && f.tisa && !name.includes("TISA")) return false;
 
-        // 費用 (並存聯集)
+        // 費用 (聯集)
         let feeMatch = true;
         if (f.pre || f.post) {
             feeMatch = false;
@@ -322,25 +342,26 @@
             if (f.post && type.includes("後收")) feeMatch = true;
         }
 
-        // 配息/累積 (精確交集邏輯)
+        // 配息/累積 (交集邏輯)
         let payoutMatch = true;
         if (f.acc || f.div) {
             payoutMatch = false;
             if (suffix === 'Janus') {
                 if (f.pre) {
                     if (f.acc && type === "前收累積") payoutMatch = true;
-                    if (f.div && ["前收月配", "前收季配", "前收穩月配"].includes(type)) payoutMatch = true;
+                    if (f.div && ["前收月配", "前收季配", "前收穩月配"].some(s => type.includes(s))) payoutMatch = true;
                 } else if (f.post) {
                     if (f.acc && type === "後收累積") payoutMatch = true;
                     if (f.div && type === "後收穩月配") payoutMatch = true;
                 } else {
                     if (f.acc && type.includes("累積")) payoutMatch = true;
-                    if (f.div && (type.includes("配息") || type.includes("月配"))) payoutMatch = true;
+                    if (f.div && (type.includes("配息") || type.includes("月配") || type.includes("季配"))) payoutMatch = true;
                 }
             } else if (suffix === 'Ireland' || suffix === 'Ninetyone') {
                 if (f.pre) {
                     if (f.acc && type.includes("前收累積")) payoutMatch = true;
                     if (f.div && type.includes("前收配息")) payoutMatch = true;
+                    if (suffix === 'Ireland' && f.div && type.includes("前收月配")) payoutMatch = true;
                 } else if (f.post) {
                     if (f.acc && type.includes("後收累積")) payoutMatch = true;
                     if (f.div && type.includes("後收月配")) payoutMatch = true;
@@ -357,7 +378,7 @@
             }
         }
 
-        // 幣別 (並存聯集)
+        // 幣別 (並存/聯集)
         let currMatch = true;
         const activeCurrs = Object.keys(f).filter(k => f[k] && !['tisa', 'pre', 'post', 'acc', 'div'].includes(k));
         if (activeCurrs.length > 0) {
@@ -442,12 +463,12 @@
         const el = document.getElementById(elId);
         const rows = Array.from(el.querySelectorAll('tbody tr'));
         el.classList.add('screenshot-mode');
-        const ow = el.style.width; el.style.width = "950px"; 
+        const ow = el.style.width; el.style.width = "1050px"; // 截圖寬度進一步放寬以適應巨大化字體
         if (rows.length <= pageSize) {
             const canvas = await html2canvas(el, { scale: 2, backgroundColor: "#ffffff" });
             save(canvas.toDataURL(), `${name}.png`);
         } else {
-            alert(`共 ${rows.length} 筆，將分 ${Math.ceil(rows.length/pageSize)} 頁截圖。`);
+            alert(`共 ${rows.length} 筆，系統將分 ${Math.ceil(rows.length/pageSize)} 頁截圖。`);
             for (let i = 0; i < rows.length; i += pageSize) {
                 rows.forEach((r, idx) => r.style.display = (idx >= i && idx < i + pageSize) ? '' : 'none');
                 const canvas = await html2canvas(el, { scale: 2, backgroundColor: "#ffffff" });
